# foxypack-telegram-telethon

./: .gitignore  README.MD  pyproject.toml
foxypack_telegram_telethon/: __init__.py  answers.py  entities.py  foxyanalysis.py  foxystat.py  utils.py
tests/: conftest.py  test_entities.py  test_foxyanalysis.py  test_foxystat.py
